--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             <h2>About Me</h2>
 
-            <p>My name is Maher Aliwe I’m 19 years old, I am a full-stack web developer intern at Codi_Tech with experience building websites and web applications. I have good experience working with HTML/CSS and Javascript, and I have experience with reactjs and laravel. I can also work with databases, and I am interested in cyber security. Excited to get a job in the web development field.
+            <p>My name is Maher Aliwe I’m 19 years old, I am a full-stack web developer with experience building websites and web applications. I have good experience working with HTML/CSS and Javascript, and I have experience with reactjs and laravel. I can also work with databases, and I am interested in cyber security. Excited to get a job in the web development field.
             </p>
 
             <div class="row">
